k8s/flink-taskmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-taskmanager
spec:
  replicas: 1
  selector:
    matchLabels: { app: flink, component: taskmanager }
  template:
    metadata:
      labels: { app: flink, component: taskmanager }
    spec:
      containers:
        - name: taskmanager
          image: apache/flink:2.3.0
          args: ["taskmanager"]
          ports:
            - containerPort: 6122
