k8s/camel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-library-service
spec:
  type: ClusterIP
  selector:
    app: book-library
  ports:
    - port: 8080
      targetPort: 7979
